cdk/java/vpc/tmp/VpcStack.template.json
{
  "Resources": {
    "vpcmaster2650CDFA": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "160.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/Resource"
      }
    },
    "vpcmasterPublicSubnet1Subnet60FEBB06": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "160.0.0.0/18",
        "VpcId": {
          "Ref": "vpcmaster2650CDFA"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master/PublicSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PublicSubnet1/Subnet"
      }
    },
    "vpcmasterPublicSubnet1RouteTableDD44C007": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcmaster2650CDFA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PublicSubnet1/RouteTable"
      }
    },
    "vpcmasterPublicSubnet1RouteTableAssociation1D489152": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmasterPublicSubnet1RouteTableDD44C007"
        },
        "SubnetId": {
          "Ref": "vpcmasterPublicSubnet1Subnet60FEBB06"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PublicSubnet1/RouteTableAssociation"
      }
    },
    "vpcmasterPublicSubnet1DefaultRouteD2AE86DC": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmasterPublicSubnet1RouteTableDD44C007"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcmasterIGWC70A543E"
        }
      },
      "DependsOn": [
        "vpcmasterVPCGW509C2A52"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PublicSubnet1/DefaultRoute"
      }
    },
    "vpcmasterPublicSubnet1EIPE04A945B": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PublicSubnet1/EIP"
      }
    },
    "vpcmasterPublicSubnet1NATGateway2A4468FD": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "vpcmasterPublicSubnet1EIPE04A945B",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "vpcmasterPublicSubnet1Subnet60FEBB06"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PublicSubnet1/NATGateway"
      }
    },
    "vpcmasterPublicSubnet2Subnet29BFBFD7": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "160.0.64.0/18",
        "VpcId": {
          "Ref": "vpcmaster2650CDFA"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master/PublicSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PublicSubnet2/Subnet"
      }
    },
    "vpcmasterPublicSubnet2RouteTable644062BB": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcmaster2650CDFA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PublicSubnet2/RouteTable"
      }
    },
    "vpcmasterPublicSubnet2RouteTableAssociation717E2A14": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmasterPublicSubnet2RouteTable644062BB"
        },
        "SubnetId": {
          "Ref": "vpcmasterPublicSubnet2Subnet29BFBFD7"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PublicSubnet2/RouteTableAssociation"
      }
    },
    "vpcmasterPublicSubnet2DefaultRouteFE571D7D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmasterPublicSubnet2RouteTable644062BB"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "vpcmasterIGWC70A543E"
        }
      },
      "DependsOn": [
        "vpcmasterVPCGW509C2A52"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PublicSubnet2/DefaultRoute"
      }
    },
    "vpcmasterPublicSubnet2EIP219F22C4": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PublicSubnet2/EIP"
      }
    },
    "vpcmasterPublicSubnet2NATGateway227CBB3E": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "vpcmasterPublicSubnet2EIP219F22C4",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "vpcmasterPublicSubnet2Subnet29BFBFD7"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PublicSubnet2/NATGateway"
      }
    },
    "vpcmasterPrivateSubnet1Subnet152F4751": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "160.0.128.0/18",
        "VpcId": {
          "Ref": "vpcmaster2650CDFA"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master/PrivateSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PrivateSubnet1/Subnet"
      }
    },
    "vpcmasterPrivateSubnet1RouteTable285139D7": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcmaster2650CDFA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PrivateSubnet1/RouteTable"
      }
    },
    "vpcmasterPrivateSubnet1RouteTableAssociationC0466AA9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmasterPrivateSubnet1RouteTable285139D7"
        },
        "SubnetId": {
          "Ref": "vpcmasterPrivateSubnet1Subnet152F4751"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "vpcmasterPrivateSubnet1DefaultRoute08910B28": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmasterPrivateSubnet1RouteTable285139D7"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "vpcmasterPublicSubnet1NATGateway2A4468FD"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PrivateSubnet1/DefaultRoute"
      }
    },
    "vpcmasterPrivateSubnet2Subnet5FEC402E": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "160.0.192.0/18",
        "VpcId": {
          "Ref": "vpcmaster2650CDFA"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master/PrivateSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PrivateSubnet2/Subnet"
      }
    },
    "vpcmasterPrivateSubnet2RouteTable94529920": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcmaster2650CDFA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PrivateSubnet2/RouteTable"
      }
    },
    "vpcmasterPrivateSubnet2RouteTableAssociation96494C7E": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmasterPrivateSubnet2RouteTable94529920"
        },
        "SubnetId": {
          "Ref": "vpcmasterPrivateSubnet2Subnet5FEC402E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "vpcmasterPrivateSubnet2DefaultRouteA1BE185E": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "vpcmasterPrivateSubnet2RouteTable94529920"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "vpcmasterPublicSubnet2NATGateway227CBB3E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/PrivateSubnet2/DefaultRoute"
      }
    },
    "vpcmasterIGWC70A543E": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/vpc-master"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/IGW"
      }
    },
    "vpcmasterVPCGW509C2A52": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpcmaster2650CDFA"
        },
        "InternetGatewayId": {
          "Ref": "vpcmasterIGWC70A543E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/vpc-master/VPCGW"
      }
    }
  }
}
